Adjust dark mode accent colour to ensure WCAG compliance

--- a/src/assets/css/global/variables.css
+++ b/src/assets/css/global/variables.css
@@ -20,7 +20,7 @@
     --colour-light: #1B1B1F;
     --colour-medium: #333642;
     --colour-dark: #F9F9FB;
-    --colour-accent: #2B55F3;
+    --colour-accent: #597AF6;
   }
 
   /**
